# eigsep_observing

./: .flake8  .gitignore  CHANGELOG.md  CLAUDE.md  LIVE_STATUS_FEATURES.md  OPERATIONS.md  README.md  TODO.md  hardware-requirements.txt  pyproject.toml  release-please-config.json  setup.cfg
.github/: copilot-instructions.md
.github/workflows/: ci.yml  claude-code-review.yml  push.yml  release-please.yml
deploy/systemd/: README.md  eigsep-host-health.service  eigsep-observe-writer.service  eigsep-observe.service
docs/: field_calibration.md
docs/superpowers/plans/: 2026-06-27-system-current-consumer-wiring.md  2026-07-02-rfswitch-eeprom-thermistors.md
docs/superpowers/specs/: 2026-06-27-system-current-consumer-wiring-design.md  2026-07-02-rfswitch-eeprom-thermistors-design.md
eigsep_observing/: __init__.py  client.py  config.py  io.py  observer.py  redis.py  sensors.py
notebooks/field_debug/: README.md  az_sensors.ipynb
notebooks/motor_pot_imu/: 01_raw_streams.ipynb  02_overlay.ipynb  03_time_lag.ipynb  04_hysteresis.ipynb  05_limit_event.ipynb  CONCLUSIONS.md  metadata_20260627_173152.h5
scripts/: CLAUDE.md  README_live_status.md  adc_snapshot.py  adc_snapshot_bench.py  capture_spectrum.py  clear_run_tag.py  field_zero.py  fpga_init.py  imu_manual.py  lidar_manual.py  live_plotter.py  live_status.py  monitor_meta.py  motor_control.py  motor_home.py  motor_manual.py  motor_scan.py  no_switch_observation.py  observe.py  panda_observe.py  pico_preflight.py  potmon_manual.py  record_metadata.py  record_vna.py  republish_header.py  rfswitch_manual.py  run_fake_observation.sh  set_motor_limits.py  simple_stream_metadata.py  snap_observe.py  standby_manual.py  tempctrl_manual.py  test_live_status.py  vna_manual.py  vna_position_sweep.py  watch_sensors.py
scripts/linearity_test/: README.md  corr_linearity.py  fit_linearity.py  linearity.npz  plot_linear.py
scripts/templates/: index.html
src/eigsep_observing/: .client.py.swp  .redis.py.swp  __init__.py  _redis_json_kv.py  _scripts_util.py  _test_fixtures.py  _vna_manual_core.py  adc.py  blocks.py  capture.py  client.py  config.py  corr.py  corr_health.py  eig_redis.py  el_sensor.py  file_heartbeat.py  fpga.py  home_ref.py  host_health.py  imu_calibration.py  io.py  keys.py  linear_range.py  motion_switch.py  motor_az_verify.py  motor_cal.py  motor_client.py  motor_homer.py  motor_limits.py  motor_scanner.py  motor_zeroer.py  obs_config_owner.py  observer.py  plot.py  redis.py  run_tag.py  sensors.py  snap_reinit.py  standby.py  (+6 more)
src/eigsep_observing/config/: corr_config.yaml  corr_config_snap122.yaml  dummy_config.yaml  live_status_thresholds.yaml  obs_config.yaml  snap_only.yaml  test_config.yaml  wiring.yaml  wiring_snap122.yaml
src/eigsep_observing/contract_tests/: __init__.py  test_key_uniqueness.py  test_producer_contracts.py
src/eigsep_observing/data/: corr_linear_range_v2_4_2026-07-08.npz  eigsep_fengine_1g_v2_3_2024-07-08_1858.fpg  eigsep_fengine_1g_v2_4_2026-06-23_2052.fpg
src/eigsep_observing/live_status/: __init__.py  aggregator.py  app.py  calibration.py  orientation.py  signals.py  snap_probe.py  thresholds.py  vna_calibration.py
src/eigsep_observing/live_status/static/css/: dashboard.css
src/eigsep_observing/live_status/static/js/: dashboard.js
src/eigsep_observing/live_status/templates/: index.html
src/eigsep_observing/scripts/: fpga_init.py  host_health.py  no_switch_observation.py  observe.py  panda_observe.py  vna_position_sweep.py
src/eigsep_observing/testing/: __init__.py  client.py  eig_redis.py  fpga.py  observer.py  pico.py  redis.py  sensors.py  utils.py
src/eigsep_redis/: __init__.py  config.py  eig_redis.py  heartbeat.py  keys.py  metadata.py  status.py  transport.py
src/eigsep_redis/testing/: __init__.py  eig_redis.py  transport.py
tests/: conftest.py  test_adc.py  test_capture.py  test_casperfpga_api.py  test_client.py  test_client_errors.py  test_config.py  test_corr_health.py  test_el_sensor.py  test_field_zero.py  test_file_heartbeat.py  test_fpga.py  test_home_ref.py  test_host_health.py  test_imu_calibration.py  test_imu_manual.py  test_integration.py  test_io.py  test_key_uniqueness.py  test_linear_range.py  test_live_status_aggregator.py  test_live_status_app.py  test_live_status_calibration.py  test_live_status_orientation.py  test_live_status_shutdown.py  test_live_status_snap_probe.py  test_live_status_thresholds.py  test_live_status_vna_calibration.py  test_motion_switch.py  test_motor_az_verify.py  test_motor_client.py  test_motor_home.py  test_motor_homer.py  test_motor_limits.py  test_motor_scanner.py  test_motor_scripts.py  test_motor_zeroer.py  test_obs_config_owner.py  test_obs_config_uploaders.py  test_observer.py  (+27 more)
