[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eigsep_observing"
version = "2.6.0"
description = "Control code for EIGSEP observing."
readme = "README.md"
license = {text = "MIT"}
authors = [{ name="Christian Hellum Bye", email="cbh@berkeley.edu" }]
requires-python = ">=3.10"
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
  "h5py",
  "matplotlib",
  "numpy",
  "pyyaml",
  "flask",
  "plotly",
  "picohost>=3.8.0",
  "eigsep-vna>=1.3",
  "eigsep_redis>=2.3.0",
]

[project.scripts]
# Console scripts for the observing entry points. They live under
# src/eigsep_observing/scripts/ so they ship inside the wheel and
# resolve to /<venv>/bin on install — required by downstream image
# builds that install from a wheelhouse and have no source checkout.
# eigsep-fpga-init / eigsep-observe back the backend systemd units;
# eigsep-panda is operator-launched (loops control physical actuators
# and self-recover from per-iteration faults — auto-restart adds risk
# without buying liveness). See deploy/systemd/README.md.
eigsep-fpga-init              = "eigsep_observing.scripts.fpga_init:main"
eigsep-observe                = "eigsep_observing.scripts.observe:main"
eigsep-panda                  = "eigsep_observing.scripts.panda_observe:main"
# Alt-mode panda observers (see scripts/CLAUDE.md): structurally
# panda_observe-like, mutually exclusive with eigsep-panda. main() takes
# (transport, args) so tests can drive it directly; cli() is the no-arg
# entry-point shim that builds the transport from --dummy and forwards.
eigsep-no-switch-observation  = "eigsep_observing.scripts.no_switch_observation:cli"
eigsep-vna-position-sweep     = "eigsep_observing.scripts.vna_position_sweep:cli"

[project.optional-dependencies]
dev = [
  "ruff",
  "fakeredis",
  "pyserial-mock",
  "pytest",
  "pytest-cov",
  "pytest-timeout",
  "pytest-xdist",
]
interactive = [
  "ipython",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"eigsep_observing" = [
  "config/*.yaml",
  "data/*.fpg",
  "live_status/templates/*.html",
  "live_status/static/css/*.css",
  "live_status/static/js/*.js",
]

[tool.pytest.ini_options]
testpaths = ["tests", "src/eigsep_observing/contract_tests"]
pythonpath = ["src"]
addopts = [
  "--cov=eigsep_observing",
  "--cov-report=term-missing",
  "--cov-report=xml",
  "--junitxml=junit.xml",
  "-o junit_family=legacy",
  "--timeout=60",
]

[tool.coverage.run]
omit = [
  "src/eigsep_observing/contract_tests/*",
  "src/eigsep_observing/_test_fixtures.py",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-ignore = ["E203"]

[tool.ruff.lint.per-file-ignores]
"src/*/__init__.py" = ["F401"]
"scripts/*.py" = ["E402"]
