[metadata]
name = eigsep_observing
version = 0.0.1
description = Control code for EIGSEP observing
url = https://github.com/EIGSEP/eigsep_observing
author = Christian Hellum Bye
author_email = chbye@berkeley.edu

[options]
python_requires = >= 3.9
packages = find:

install_requires =
    h5py
    numpy
    eigsep_corr @ git+https://github.com/EIGSEP/eigsep_corr.git@dev

[options.extras_require]
dev =
    black
    flake8
    pytest
    pytest-cov

[flake8]
ignore = E203, W503
per-file-ignores =
    __init__.py:F401
max-line-length = 79
